--- a/clipboard-landing-page-master/style.css
+++ b/clipboard-landing-page-master/style.css
@@ -1,6 +1,6 @@
 
 *{
-    font-family: Bai Jamjuree;
+    font-family:"Bai Jamjuree";
   
 }
 
@@ -160,43 +160,55 @@ h4{
 @media screen and (max-width:576px) {
 
       .image-devices{
-        width: 500px;
+        width: 400px;
       }
     
 
 
     .text3{
-        width: 600px;
+        width: 500px;
         
     }
 
     .image-devices1{
         width: 500px;
-        margin-left: 100px;
+        margin-left: 50px;
     }
   
     .super{
-        margin-left: 100px;
+        margin-left: 60px;
         width: 500px;
+        
     }
 
     .display-flex{
         display: flex;
-        gap: 40px;
-    
+        gap: 20px;
+        position: relative;
+        right: 35px;
+
     }
 
     .text4{
         margin-left: 60px;
+        width: 500px;
     }
     .footer1{
         display: flex ;
-        gap: 70px;
+        gap: 40px;   
     }
 
     .text1{
         position: relative;
         bottom: 60px;
-    
+        right: 40px;
+    }
+
+    .header{
+        width: 550px;
+        margin-left: 20px;
+    }
+    .text2{
+        width: 500px;
     }
 }
